--- a/portfolio.html
+++ b/portfolio.html
@@ -37,13 +37,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contract</a>
+                    <a class="nav-link" href="contact.html">Contact</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Portofolio</a>
+                    <a class="nav-link" href="portfolio.html">Portofolio</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="index.html">About</a>
                 </li>
             </ul>
         </div>
@@ -55,23 +55,27 @@
     <div class="container">
         <!-- row 1 -->
         <div class="row">
-            <h1> About Me</h1>
+            <h1> Portfolio</h1>
         </div>
    
-        <!-- row 2 -->
+        <!-- image portfolio -->
         <div class="row">
-            <div id="fixed-pic">
-                <img src="./assets/image/IMG_1766.JPG" style="height: 150px; width: 100px;" ></img>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sapien libero, semper nec turpis quis, euismod elementum ligula. Aenean non imperdiet lectus, nec imperdiet elit. Cras id tristique elit. Sed mollis mi ut efficitur molestie. Nullam posuere elit eu quam porttitor viverra. Praesent mattis neque turpis, quis tincidunt arcu bibendum eu. Phasellus malesuada, elit sit amet facilisis condimentum, lorem nisi blandit orci, eget congue purus odio in nibh. Pellentesque id laoreet lectus. Nam luctus condimentum enim. Ut tincidunt nisi id enim posuere molestie. Integer feugiat tortor nisl, vitae finibus libero facilisis malesuada. Vivamus consequat sit amet arcu id aliquam. Aliquam augue nisi, convallis eu fringilla a, mollis sit amet nulla. Ut ut tincidunt dui. Quisque vel mollis neque, eu eleifend ipsum.
-                </p>
-                <p>
-                    Again. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sapien libero, semper nec turpis quis, euismod elementum ligula. Aenean non imperdiet lectus, nec imperdiet elit. Cras id tristique elit. Sed mollis mi ut efficitur molestie. Nullam posuere elit eu quam porttitor viverra. Praesent mattis neque turpis, quis tincidunt arcu bibendum eu. Phasellus malesuada, elit sit amet facilisis condimentum, lorem nisi blandit orci, eget congue purus odio in nibh. 
-                </p>
+            <div class="column">
+                <div class="card">..</div>
             </div>
-        </div>
-
-        </div>
+            <div class="column">
+                <div class="card">..</div>
+            </div>
+            <div class="column">
+                <div class="card">..</div>
+            </div>
+            <div class="column">
+                <div class="card">..</div>
+            </div>
+            <div class="column">
+                <div class="card">..</div>
+            </div>
+          </div>
       
     </div>
   
