add comments and sticky footer

--- a/index.html
+++ b/index.html
@@ -10,16 +10,18 @@
 
     <title>About Melvyn</title>
 
-    <!-- We need to bring in the bootstrap CSS -->
+    <!-- Stylesheet made for this webpage and also need to bring in the bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
 
+    <!-- Java scripts from bootstrap CDN and others -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
 </head>
 
+<!-- page background color -->
 <body style="background-color:grey;">
 
   <!-- NavBar (copied and pasted from WC3) -->
@@ -54,27 +56,30 @@
   <!-- Main Body goes in Container -->
     <div class="container">
         <!-- row 1 -->
-        <div class="row">
-            <h1> About Me</h1>
-        </div>
+        <header class="row">
+            <h1> About Melvyn</h1>
+        </header>
    
         <!-- row 2 -->
-        <div class="row">
-            <div id="fixed-pic">
+        <section class="row">
+            <main id="fixed-pic">
                 <img src="./assets/image/IMG_1766.JPG" style="height: 150px; width: 100px;" ></img>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sapien libero, semper nec turpis quis, euismod elementum ligula. Aenean non imperdiet lectus, nec imperdiet elit. Cras id tristique elit. Sed mollis mi ut efficitur molestie. Nullam posuere elit eu quam porttitor viverra. Praesent mattis neque turpis, quis tincidunt arcu bibendum eu. Phasellus malesuada, elit sit amet facilisis condimentum, lorem nisi blandit orci, eget congue purus odio in nibh. Pellentesque id laoreet lectus. Nam luctus condimentum enim. Ut tincidunt nisi id enim posuere molestie. Integer feugiat tortor nisl, vitae finibus libero facilisis malesuada. Vivamus consequat sit amet arcu id aliquam. Aliquam augue nisi, convallis eu fringilla a, mollis sit amet nulla. Ut ut tincidunt dui. Quisque vel mollis neque, eu eleifend ipsum.
+                    My name is Melvyn, an aspiring software develper. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sapien libero, semper nec turpis quis, euismod elementum ligula. Aenean non imperdiet lectus, nec imperdiet elit. Cras id tristique elit. Sed mollis mi ut efficitur molestie. Nullam posuere elit eu quam porttitor viverra. Praesent mattis neque turpis, quis tincidunt arcu bibendum eu. Phasellus malesuada, elit sit amet facilisis condimentum, lorem nisi blandit orci, eget congue purus odio in nibh. Pellentesque id laoreet lectus. Nam luctus condimentum enim. Ut tincidunt nisi id enim posuere molestie. Integer feugiat tortor nisl, vitae finibus libero facilisis malesuada. Vivamus consequat sit amet arcu id aliquam. Aliquam augue nisi, convallis eu fringilla a, mollis sit amet nulla. Ut ut tincidunt dui. Quisque vel mollis neque, eu eleifend ipsum.
                 </p>
                 <p>
-                    Again. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sapien libero, semper nec turpis quis, euismod elementum ligula. Aenean non imperdiet lectus, nec imperdiet elit. Cras id tristique elit. Sed mollis mi ut efficitur molestie. Nullam posuere elit eu quam porttitor viverra. Praesent mattis neque turpis, quis tincidunt arcu bibendum eu. Phasellus malesuada, elit sit amet facilisis condimentum, lorem nisi blandit orci, eget congue purus odio in nibh. 
+                    Again, let's do this again. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sapien libero, semper nec turpis quis, euismod elementum ligula. Aenean non imperdiet lectus, nec imperdiet elit. Cras id tristique elit. Sed mollis mi ut efficitur molestie. Nullam posuere elit eu quam porttitor viverra. Praesent mattis neque turpis, quis tincidunt arcu bibendum eu. Phasellus malesuada, elit sit amet facilisis condimentum, lorem nisi blandit orci, eget congue purus odio in nibh. 
                 </p>
-            </div>
-        </div>
+            </main>
+        </section>
+          
 
-        </div>
-      
-    </div>
-  
+    <footer class="footer">
+        <span class="text-muted">Powered by Melvyn.</span>
+    </footer>
+
+</div>
+
 </body>
 
 </html>
