--- a/portfolio.html
+++ b/portfolio.html
@@ -1,4 +1,4 @@
-<!-- contract page -->
+<!-- Portfolio page -->
 <!DOCTYPE html>
 <html lang="en-us">
 
@@ -10,10 +10,11 @@
 
     <title>About Melvyn</title>
 
-    <!-- We need to bring in the bootstrap CSS -->
+    <!-- Stylesheet made for this webpage and also need to bring in the bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
 
+    <!-- Java scripts from bootstrap CDN and others -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
@@ -54,29 +55,42 @@
   <!-- Main Body goes in Container -->
     <div class="container">
         <!-- row 1 -->
-        <div class="row">
+        <header class="row">
             <h1> Portfolio</h1>
-        </div>
+        </header>
    
         <!-- image portfolio -->
-        <div class="row">
-            <div class="column">
-                <div class="card">..</div>
-            </div>
-            <div class="column">
-                <div class="card">..</div>
-            </div>
-            <div class="column">
-                <div class="card">..</div>
-            </div>
-            <div class="column">
-                <div class="card">..</div>
-            </div>
-            <div class="column">
-                <div class="card">..</div>
-            </div>
-          </div>
+        <section class="row">
+            <figure class="column">
+                <figcaption class="card">
+                    <img src="assets/image/pic1.jpg" alt="pic1">
+                </figcaption>
+            </figure>
+            <figure class="column">
+                <figcaption class="card">
+                    <img src="assets/image/pic2.jfif" alt="pic2">
+                </figcaption>
+            </figure>
+            <figure class="column">
+                <figcaption class="card">
+                    <img src="assets/image/pic3.jfif" alt="pic3">
+                </figcaption>
+            </figure>
+            <figure class="column">
+                <figcaption class="card">
+                    <img src="assets/image/pic4.jfif" alt="pic4">
+                </figcaption>
+            </figure>
+            <figure class="column">
+                <figcaption class="card">
+                    <img src="assets/image/pic5.jfif" alt="pic5">
+                </figcaption>
+            </figure>
+        </section>
       
+        <footer class="footer">
+            <span class="text-muted">Powered by Melvyn.</span>
+        </footer>
     </div>
   
 </body>
