--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <!-- NavBar (copied and pasted from WC3) -->
   <!-- Static logo -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
         <p id="logo">Melvyn</p>
         </a>
        
