--- a/index.html
+++ b/index.html
@@ -24,12 +24,10 @@
 <!-- page background color -->
 <body style="background-color:grey;">
 
-  <!-- NavBar (copied and pasted from WC3) -->
-  <!-- Static logo -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="index.html">
-        <p id="logo">Melvyn</p>
-        </a>
+    <!-- NavBar (copied and pasted from WC3) -->
+    <!-- Static logo -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="index.html">Melvyn</a>
        
         <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -38,20 +36,18 @@
         <!-- nav items -->
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link" href="contact.html">Contact</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link" href="portfolio.html">Portofolio</a>
                 </li>
-                <li class="nav-item active">
+                <li class="nav-item disable">
                     <a class="nav-link" href="index.html">About</a>
                 </li>
             </ul>
         </div>
     </nav>
-
-
 
   <!-- Main Body goes in Container -->
     <div class="container">
@@ -75,7 +71,7 @@
           
 
     <footer class="footer">
-        <span class="text-muted">Powered by Melvyn.</span>
+        <span class="text-muted">&#169 Copyright 2020, melvyn, Inc</span>
     </footer>
 
 </div>
