--- a/portfolio.html
+++ b/portfolio.html
@@ -25,10 +25,8 @@
 
   <!-- NavBar (copied and pasted from WC3) -->
   <!-- Static logo -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="index.html">
-        <p id="logo">Melvyn</p>
-        </a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="index.html">Melvyn</a>
        
         <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -37,10 +35,10 @@
         <!-- nav items -->
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link" href="contact.html">Contact</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item disable">
                     <a class="nav-link" href="portfolio.html">Portofolio</a>
                 </li>
                 <li class="nav-item active">
@@ -89,7 +87,7 @@
         </section>
       
         <footer class="footer">
-            <span class="text-muted">Powered by Melvyn.</span>
+            <span class="text-muted">&#169 Copyright 2020, melvyn, Inc</span>
         </footer>
     </div>
   
