fix validation check errors

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <!-- row 2 -->
         <main class="row">
             <section id="fixed-pic">
-                <img src="./assets/image/IMG_1766.JPG" style="height: 150px; width: 100px;" alt="main-pic"></img>
+                <img src="./assets/image/IMG_1766.JPG" style="height: 150px; width: 100px;" alt="main-pic">
                 <p>
                     My name is Melvyn, an aspiring software develper. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sapien libero, semper nec turpis quis, euismod elementum ligula. Aenean non imperdiet lectus, nec imperdiet elit. Cras id tristique elit. Sed mollis mi ut efficitur molestie. Nullam posuere elit eu quam porttitor viverra. Praesent mattis neque turpis, quis tincidunt arcu bibendum eu. Phasellus malesuada, elit sit amet facilisis condimentum, lorem nisi blandit orci, eget congue purus odio in nibh. Pellentesque id laoreet lectus. Nam luctus condimentum enim. Ut tincidunt nisi id enim posuere molestie. Integer feugiat tortor nisl, vitae finibus libero facilisis malesuada. Vivamus consequat sit amet arcu id aliquam. Aliquam augue nisi, convallis eu fringilla a, mollis sit amet nulla. Ut ut tincidunt dui. Quisque vel mollis neque, eu eleifend ipsum.
                 </p>
@@ -71,7 +71,7 @@
           
 
     <footer class="footer">
-        <span class="text-muted">&#169 Copyright 2020, melvyn, Inc</span>
+        <span class="text-muted">&#169Copyright 2020, melvyn, Inc</span>
     </footer>
 
 </div>
