--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
                     <a class="nav-link" href="contact.html">Contact</a>
                 </li>
                 <li class="nav-item disable">
-                    <a class="nav-link" href="portfolio.html">Portofolio</a>
+                    <a class="nav-link" href="portfolio.html">Portfolio</a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="index.html">About</a>
